--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "e-commerce-1",
+  "name": "tivestore",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/candrasaputra/e-commerce-1.git"
+    "dev": "NODE_ENV=development nodemon app",
+    "test": "NODE_ENV=test mocha --exit"
   },
   "keywords": [],
-  "author": "",
+  "author": "candra saputra",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/candrasaputra/e-commerce-1/issues"
-  },
-  "homepage": "https://github.com/candrasaputra/e-commerce-1#readme",
-  "devDependencies": {
-    "mocha": "^6.2.0"
-  },
   "dependencies": {
+    "axios": "^0.19.0",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.13"
+  },
+  "devDependencies": {
     "chai": "^4.2.0",
-    "chai-http": "^4.3.0"
+    "chai-http": "^4.3.0",
+    "dotenv": "^8.1.0",
+    "mocha": "^6.2.0"
   }
 }
