--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,3 @@
 JWT_PRIVATE_KEY='asdasddsfdfs2334234dsfsdfdfsdfs'
+GCP_KEY_FILE_PATH='./Hacktiv8 Ecommerce-c8cf09acf025.json'
+GCP_PROJECT_ID='hacktiv8-ecommerce-250805'
