--- a/server/.env
+++ b/server/.env
@@ -3,3 +3,7 @@ DATABASE_URL='mongodb://localhost/posterpedia'
 DATABASE_TEST_URL='mongodb://localhost/posterpedia-test'
 SALT_ROUND=10
 JWT_SECRET=SECRET
+DEFAULT_PASSWORD=PASSWORD
+CLOUD_BUCKET=posterpedia
+GCLOUD_PROJECT=posterpedia
+KEYFILE_PATH=keyfile.json
