--- a/server/package.json
+++ b/server/package.json
@@ -19,11 +19,13 @@
   },
   "homepage": "https://github.com/humble-fox-2019/e-commerce#readme",
   "dependencies": {
+    "@google-cloud/storage": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
