--- a/server/package.json
+++ b/server/package.json
@@ -24,12 +24,14 @@
     "mocha": "^6.2.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^3.2.1",
     "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "multer": "^1.4.2"
   }
 }
