--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,8 @@
     "font-awesome": "^4.7.0",
     "sweetalert2": "^8.17.4",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
