--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon app.js",
     "test": "NODE_ENV=test mocha --exit"
   },
   "keywords": [],
