--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
     "vue-google-login": "^2.0.2",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vuex": "^3.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
