--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "core-js": "^2.6.5",
+    "toastr": "^2.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-toastr": "^2.1.2",
     "vuetify": "^2.0.0"
   },
   "devDependencies": {
