--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,21 @@
   "description": "",
   "main": "app.js",
   "scripts": {
+    "dev": "NODE_ENV=development nodemon app.js",
     "test": "NODE_ENV=test mocha --exit"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^3.3.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
