--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-swal": "^1.0.0",
     "vue-toast-notification": "0.0.3"
   },
   "devDependencies": {
