--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@google-cloud/storage": "^3.3.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
@@ -18,7 +19,8 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mocha": "^6.2.0",
-    "mongoose": "^5.7.1"
+    "mongoose": "^5.7.1",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "dotenv": "^8.1.0"
