--- a/client/package.json
+++ b/client/package.json
@@ -8,13 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@google-cloud/storage": "^3.3.0",
     "axios": "^0.19.0",
     "core-js": "^2.6.5",
-    "multer": "^1.4.2",
     "toastr": "^2.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.0.3",
+    "vue-sweetalert2": "^2.1.1",
     "vue-toastr": "^2.1.2",
     "vuetify": "^2.0.0"
   },
