--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,7 @@
     "mocha": "^6.2.0"
   },
   "dependencies": {
+    "@google-cloud/storage": "^3.3.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
