--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "@google-cloud/storage": "^3.3.0",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
+    "bcryptjs": "^2.4.3",
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
     "cors": "^2.8.5",
